# SRXDBepInExInstaller

./: .gitignore  README.md  build.sh  index.py  pyproject.toml  srxdbepinexinstaller.py  srxdbepinexinstallerui.py  srxdbepinexinstallerui.pyw
.github/workflows/: build.yml  python-app.yml
buildscripts/: PyInstallerBuild.sh  cxFreezeSetup.py  nuitkaCompile.py
modules/: args.py  bepinex.py  config.py  configutils.py  directoryfiller.py  downloadutils.py  github.py  gui.py  installer.py  steamutils.py  tui.py  unitylibs.py  utils.py
