[tool.poetry]
name = "srxdbepinxinstaller"
version = "2.0.0"
description = ""
authors = ["Amy Y <ctrlalternativedelete@gmail.com>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
